update: change the response codes for creating order to 200 - Changed the success reponse code to 200 to conform with ussd policy - Changed all the error codes to 200 to conform with ussd policy - Made changes too documentation to conform with changes
