# api/v1/docs/swagger.yaml
@@ -137,7 +137,7 @@ paths:
                 - phone
                 - ticket_type
       responses:
-        '201':
+        '200':
           description: Order created successfully.
           content:
             application/json:
@@ -153,7 +153,7 @@ paths:
                   message:
                     type: string
                     example: "Order created successfully"
-        '400':
+        '200':
           description: Missing required fields.
           content:
             application/json:
@@ -166,7 +166,7 @@ paths:
                   message:
                     type: string
                     example: "Missing required fields."
-        '500':
+        '200':
           description: An error occurred while creating the order.
           content:
             application/json:
